# pairwriter-vsc

./: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: compiling.yaml  release.yaml
src/: extension.ts  helper_object.d.ts  server.ts
src/pairwriter_helper/: .gitignore  Cargo.toml  README.md  build.py  os_specific_compile.py  package-lock.json  package.json
src/pairwriter_helper/crates/pairwriter_helper/: Cargo.toml  Cross.toml
src/pairwriter_helper/crates/pairwriter_helper/src/: client_api.rs  funcs.rs  lib.rs  server_api.rs
src/pairwriter_helper/lib/: index.cjs  load.cjs
src/pairwriter_helper/src/: index.cts  load.cts
src/test/: extension.test.js.map
