[package]
name = "pairwriter_helper"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
neon = "1"
serde_json = "1.0.128"
tokio = "1.40.0"
pairwriter = { git="https://github.com/m10090/pairwriter.git", rev="2e0ee24183509e415a356cd46d1068171a6b2a60" } 

